# lps-node-firmware

./: .gcc-flags.json  .gitignore  CMakeLists.txt  platformio.ini  sdkconfig.defaults  sdkconfig.tdoa_anchor2  sdkconfig.tdoa_anchor3
inc/: deca_spi.h  dwOps.h  eeprom.h  uwb.h
lib/libdw3000/: README.md  library.json
lib/libdw3000/decadriver/: deca_device.c  deca_types.h
lib/libdw3000/inc/: deca_spi.h  libdw1000.h  libdw3000_shim.h
lib/libdw3000/src/: libdw3000_shim.c
src/: CMakeLists.txt  button.c  cfg.c  dwOps.c  led.c  lpp.c  mac.c  main.c  uwb.c  uwb_sniffer.c  uwb_tdoa_anchor2.c  uwb_tdoa_anchor3.c  uwb_tdoa_tag.c  uwb_twr_anchor.c  uwb_twr_tag.c
